<resources>
    <string name="app_name">login_sign_up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="last_name">Last Name</string>
    <string name="enter_details">Enter Details</string>
    <string name="first_name">First Name</string>
    <string name="select_date">Select Date</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="_91">+91</string>
    <string name="confirm_password">Confirm password</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="logout">Logout</string>
</resources>