<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login">

        <EditText
            android:id="@+id/Username"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.343" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Username" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginTop="28dp"
            android:text="@string/login"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/or"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="87dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>